--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
          }
    </style>
    <body>
-      <p><img src="dsa.png" width="900" height="800"></p>
+      <p><img src="fa.png" width="900" height="800"></p>
    </body>
 </html>
