--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>DSA PORTION</title>
+      <title>FA PORTION</title>
    </head>
    <style>
        p{
