--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>FA PORTION</title>
+      <title>SE PORTION</title>
    </head>
    <style>
        p{
@@ -9,6 +9,6 @@
          }
    </style>
    <body>
-      <p><img src="fa.png" width="900" height="800"></p>
+      <p><img src="se.png" width="900" height="800"></p>
    </body>
 </html>
