--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
          }
    </style>
    <body>
-      <p><img src="se.png" width="900" height="1200"></p>
+      <p><img src="daa.png" width="900" height="1200"></p>
    </body>
 </html>
