--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>SE PORTION</title>
+      <title>DAA PORTION</title>
    </head>
    <style>
        p{
